cd-app/dev/main-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service-deployment
  namespace: visawheels
  labels:
    app: visasheels
spec:
replicas: 2
selector:
  matchLabels:
    app: visasheels
template:
  metadata:
    labels:
      app: visawheels
  spec:
  containers:
  - name: main-service
    image: talyahalomy/main-service:latest
    ports: 9001
