cd-app/dev/visa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visa-deployment
  namespace: visawheels
  labels:
    app: visawheels
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visawheels
  template:
    metadata:
      labels:
        app: visaswheels
        service: main-service
    spec:
      containers:
      - name: visa-service
        image: talyahalomy/visa-service:latest
        ports:
        - containerPort: 8000
