cd-app/dev/lb-main-service.yaml

apiVersion: v1
kind: Service
metadata:
   name: main-service
   namespace: visawheels
spec:
    selector:
        app: visawheels
    ports:
      - protocol: TCP
        port: 9000
        targetPort: 9000
    type: LoadBalancer
