cd-app/dev/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: visawheels
    container: main-service
  ports:
  - port: 9000
    targetPort: 9000
