cd-app/dev/mongodb-external-svc.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb
subsets:
  - addresses: 
      - ip: 10.48.4.29
    ports:
      - port: 27017
