cd-app/dev/network-service-main.yaml

apiVersion: apps/v1
kind: Service
metadata:
  name: main-service
  namespace: visawheels
  labels:
    app: visasheels
    service: main-service
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
  type: ClusterIP
