cd-app/dev/network-service-visa.yaml

apiVersion: apps/v1
kind: Service
metadata:
  name: visa-service
  namespace: visawheels
  labels:
    app: visasheels
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
