cd-app/dev/visa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
  namespace: visawheels
spec:
  selector:
    app: visawheels
    container: visa-service
  ports:
  - port: 9010
    targetPort: 9010
