cd-app/dev/main-visa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /cars
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 9000
      - path: /visa
        pathType: Prefix
        backend:
          service:
            name: visa
            port:
              number: 9010
